--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,27 +31,28 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">68.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">50.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.Home.Associate_Home</td><td><a href="#m1"><b>TCBA01102</b>  </a></td><td class="numi">1</td><td>1542888775510</td><td class="numi">47854</td></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">com.Home.Associate_Home</td><td><a href="#m2"><b>TCBA01101</b>  </a></td><td class="numi">1</td><td>1542888770603</td><td class="numi">4905</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01103</b>  </a></td><td class="numi">1</td><td>1542888823381</td><td class="numi">2375</td></tr>
+<tr class="passedodd"><td rowspan="8">com.associatePortal.Associate_Login</td><td><a href="#m1"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1547028676069</td><td class="numi">492</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1547028676563</td><td class="numi">431</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1547028676995</td><td class="numi">415</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1547028677411</td><td class="numi">2457</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1547028679872</td><td class="numi">3541</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1547028683415</td><td class="numi">3464</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1547028686881</td><td class="numi">10018</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1547028696901</td><td class="numi">3812</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.Home.Associate_Home:TCBA01102</h2>
-<div style="padding-left:3em">
-<p>Timeout during waiting for element: &apos;//span[contains(text(),&apos;26&apos;)]&apos;</p>
-com.Library.UtilityClass.waitFor(UtilityClass.java:256)
-<br/>at com.Library.UtilityClass.click(UtilityClass.java:168)
-<br/>at com.Home.Associate_Home.TCBA01102(Associate_Home.java:139)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">com.associatePortal.Associate_Login:TCBA01005</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.Home.Associate_Home:TCBA01103</h2>
+<h2 id="m2">com.associatePortal.Associate_Login:TCBA01006</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.Home.Associate_Home:TCBA01101</h2>
+<h2 id="m3">com.associatePortal.Associate_Login:TCBA01001</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m4">com.associatePortal.Associate_Login:TCBA01002</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m5">com.associatePortal.Associate_Login:TCBA01004</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m6">com.associatePortal.Associate_Login:TCBA01007</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m7">com.associatePortal.Associate_Login:TCBA01008</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m8">com.associatePortal.Associate_Login:TCBA01003</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
