--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b7d71">  <td>18/11/22 17:42:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01101</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/11/22 17:42:55</td>   <td>4907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01102</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/11/22 17:43:43</td>   <td>52778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01103</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>18/11/22 17:42:37</td>   <td>-12950</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@14ba872]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>18/11/22 17:43:45</td>   <td>55159</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@14ba872]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01001</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:16</td>   <td>494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01002</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:16</td>   <td>926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01003</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:17</td>   <td>1342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01004</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:19</td>   <td>3803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01005</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:23</td>   <td>7346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01006</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:26</td>   <td>10812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01007</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>19/01/09 15:41:36</td>   <td>20832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">TCBA01008</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>19/01/09 15:40:49</td>   <td>-26152</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>19/01/09 15:41:40</td>   <td>24647</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.associatePortal.Associate_Login@25b2fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
 </table>
